--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,8 +10,36 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
  *= require_self
  *= require application
  */
 @import "semantic-ui";
+body {
+  background: -moz-linear-gradient(45deg, rgba(219,51,64,1) 0%, rgba(255,113,117,1) 100%); /* ff3.6+ */
+  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, rgba(219,51,64,1)), color-stop(100%, rgba(255,113,117,1))); /* safari4+,chrome */
+  background: -webkit-linear-gradient(45deg, rgba(219,51,64,1) 0%, rgba(255,113,117,1) 100%); /* safari5.1+,chrome10+ */
+  background: -o-linear-gradient(45deg, rgba(219,51,64,1) 0%, rgba(255,113,117,1) 100%); /* opera 11.10+ */
+  background: -ms-linear-gradient(45deg, rgba(219,51,64,1) 0%, rgba(255,113,117,1) 100%); /* ie10+ */
+  background: linear-gradient(45deg, rgba(219,51,64,1) 0%, rgba(255,113,117,1) 100%); /* w3c */
+}
+
+.ui.menu a.ui.item {
+  color: #FF7175;
+  font-size: 1.25em;
+}
+
+h1.ui.header, h2.ui.header, h3.ui.header, label, i, em{
+  color: #fff;
+}
+
+a {
+  color: #fff;
+}
+
+a:hover {
+  color: #E0E1E2;
+}
+
+.middle.aligned.column .ui.checkbox label {
+  color: #fff;
+}
