--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,31 +1,24 @@
-%h2
-  Edit #{resource_name.to_s.humanize}
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+%h2.ui.header Edit Account
+= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "ui form", method: :put }) do |f|
   = devise_error_messages!
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true
-  - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-    %div
-      Currently waiting confirmation for: #{resource.unconfirmed_email}
-  .field
-    = f.label :password
-    %i (leave blank if you don't want to change it)
-    %br/
-    = f.password_field :password, autocomplete: "off"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .field
-    = f.label :current_password
-    %i (we need your current password to confirm your changes)
-    %br/
-    = f.password_field :current_password, autocomplete: "off"
+  .ui.grid{style: "max-width: 400px; margin: auto;"}
+    .row.middle.aligned.field
+      .sixteen.wide.column
+        = f.email_field :email, autofocus: true, placeholder: 'Email'
+    - if devise_mapping.confirmable? && resource.pending_reconfirmation?
+      .row.middle.aligned.field
+        .column
+          %h3.ui.header Currently waiting confirmation for: #{resource.unconfirmed_email}
+    .row.middle.aligned.field
+      .sixteen.wide.column
+        = f.password_field :password, autocomplete: "off", placeholder: 'Password'
+    .row.middle.aligned.field
+      .sixteen.wide.column
+        = f.password_field :password_confirmation, autocomplete: "off", placeholder: 'Confirm Password'
+    .row.middle.aligned.field
+      .sixteen.wide.column
+        = f.password_field :current_password, autocomplete: "off", placeholder: 'New Password (Leave Blank to Keep the Same)'
   .actions
-    = f.submit "Update"
-%h3 Cancel my account
-%p
-  Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-= link_to "Back", :back
+    = f.submit "Update", class: "ui inverted button", style: 'margin-top: 1rem;'
+    = button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "ui inverted button"
+    = link_to  "Back", :back, class: "ui inverted button"
