--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,28 +1,18 @@
-%h2 Sign up
+%h2.ui.header Sign up
 = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "ui form" }) do |f|
   = devise_error_messages!
-  .ui.grid{style: "max-width: 500px; margin: auto;"}
+  .ui.grid{style: "max-width: 400px; margin: auto;"}
     .row.field
-      .four.wide.middle.aligned.column
-        = f.label :email
-      .twelve.wide.column
-        = f.email_field :email, autofocus: true
+      .sixteen.wide.column
+        = f.email_field :email, autofocus: true, placeholder: 'Email'
     .row.field
-      .four.wide.middle.aligned.column
-        = f.label :password
-        %br
-        - if @minimum_password_length
-          %em
-            (#{@minimum_password_length} characters minimum)
-      .twelve.wide.column
-        = f.password_field :password, autocomplete: "off"
+      .sixteen.wide.column
+        = f.password_field :password, autocomplete: "off", placeholder: 'Password (8 Characters Minimum)'
     .row.field
-      .four.wide.middle.aligned.column
-        = f.label :password_confirmation
-      .twelve.wide.column
-        = f.password_field :password_confirmation, autocomplete: "off"
+      .sixteen.wide.column
+        = f.password_field :password_confirmation, autocomplete: "off", placeholder: 'Confirm Password'
   .actions
     %br
-    = f.submit "Sign up", class: "ui button"
+    = f.submit "Sign up", class: "ui inverted button"
 %br
 = render "devise/shared/links"
