--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,12 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
-    %p.notice= notice
-    %p.alert= alert
+    .ui.menu
+      .item
+        = link_to root_path do
+          = image_tag 'peeyr.png', class: 'ui tiny image'
+      .right.menu
+        = link_to 'Sign Up', new_user_registration_path, { class: 'ui item' }
+        = link_to 'Sign In', new_user_session_path, { class: 'ui item' }
     .ui.center.aligned.container
       = yield
