--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -1,3 +1,11 @@
-%h1.ui.header= @question.question
-%h3.ui.header Created by #{@question.number}
-= button_to "Claim this Question", claim_question_path(@question.id), class: "ui button"
+.ui.center.aligned.segment
+  .ui.vertically.divided.centered.grid
+    .row
+      .centered.column
+        %h1.center.aligned.ui.header= @question.question
+        %h3.center.aligned.ui.header Asked by #{@question.number}
+    .row
+      - if @current_question
+        .ui.disabled.inverted.red.button You've Already Claimed a Question
+      - else
+        = button_to "Claim this Question", claim_question_path(@question.id), class: "ui red inverted button"
