--- a/app/views/layouts/home.html.haml
+++ b/app/views/layouts/home.html.haml
@@ -2,11 +2,18 @@
 %html
   %head
     %meta{content: 'text/html; charset=UTF-8', 'http-equiv' => 'Content-Type'}/
-    %title Result - Easy HW Help
+    %title Peeyr Instant
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     = stylesheet_link_tag 'home', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = javascript_include_tag 'home', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
+    .ui.menu#menu
+      .item
+        = link_to root_path do
+          = image_tag 'peeyr.png', class: 'ui tiny image'
+      .right.menu
+        = link_to 'Sign Up', new_user_registration_path, { class: 'ui item' }
+        = link_to 'Sign In', new_user_session_path, { class: 'ui item' }
     = yield
