--- a/app/views/layouts/questions.html.haml
+++ b/app/views/layouts/questions.html.haml
@@ -11,7 +11,8 @@
   %body
     .ui.menu
       .item
-        = image_tag 'peeyr.png', class: 'ui tiny image'
+        = link_to root_path do
+          = image_tag 'peeyr.png', class: 'ui tiny image'
       = link_to 'Open Questions', questions_path, { class: 'ui item' }
       - if @current_question
         = link_to 'Your Question', write_question_path(@current_question.id), { class: 'ui item' }
