--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -3,10 +3,18 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 $primary-color: #FF4C65 !default;
 
-body {
-  background: $primary-color;
-  width: 100%;
-  height: 100vh;
+.centered {
+  width: 15%;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+}
+
+.logo {
+  font-family: 'Pacifico';
 }
 
 .masthead {
