--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -1,8 +1,16 @@
+%style
+  body {
+  background: #FF4C65;
+  width: 100%;
+  height: 100vh;
+  }
+
+
 .masthead
   .container
     .row
       .col.s6.right-align
-        %h1.right-align.header julian
+        %h1.right-align.logo.header Julian
         %h4.right-align.header effortless instant tutoring
         .row.col.s8.right-align
           .input-field.col.s6.right-align
