--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -10,7 +10,7 @@
   .container
     .row
       .col.s6.right-align
-        %h1.right-align.logo.header Julian
+        %h1.right-align.logo.header{style:'color: white'} Julian
         %h4.right-align.header effortless instant tutoring
         .row.col.s8.right-align
           .input-field.col.s6.right-align
