--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -7,13 +7,15 @@ $primary-color: #FF4C65 !default;
   font-family: 'Pacifico';
 }
 
-body {
+body, html {
   width: 100%;
+  height: 100%;
+  min-height: 100vh;
 }
 
 .centered {
   width: 100%;
-  height: 100% !important;
+  min-height: 100%;
 
   display: flex;
   align-items: center;
