--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -15,4 +15,4 @@
         %p.right-align <span class="lowpacity">or text</span> <b>(508) 444-9679</b>
       .col.m6
         = image_tag 'iphone.png'
-  %p.bottom <a>Register</a> to be a tutor or <a>sign in</a> to your dashboard
+  %p.bottom <a href="#{new_user_registration_url}">Register</a> to be a tutor or <a href="#{new_user_session_url}">sign in</a> to your dashboard
