--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -35,6 +35,18 @@ body, html {
     }
     .remember_me {
       text-align: center;
+      margin-bottom: 1rem;
+    }
+    .row {
+      margin-bottom: 0;
+    }
+  }
+  a {
+    color: $primary-color;
+    opacity: 0.7;
+    transition: opacity 0.2s ease-in-out;
+    &:hover {
+      opacity: 1;
     }
   }
 }
