--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -1,3 +1,36 @@
 // Place all the styles related to the Questions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+$primary-color: #FF4C65 !default;
+
+.questions {
+  max-width: 1000px;
+  color: $primary-color;
+
+  textarea {
+    color: #000;
+    margin-bottom: 2rem;
+  }
+
+  h5 {
+    margin-bottom: 2rem;
+  }
+
+  .button_to {
+    display: inline-block;
+  }
+
+  .card {
+    .card-action {
+      a {
+        color: $primary-color !important;
+        opacity: 0.7 !important;
+        transition: opacity 0.2s ease-in-out !important;
+
+        &:hover {
+          opacity: 1 !important;
+        }
+      }
+    }
+  }
+}
