--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -3,6 +3,15 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 $primary-color: #FF4C65 !default;
 
+nav {
+  .container {
+    max-width: 1000px;
+  }
+  .logo {
+    font-size: 2rem;
+  }
+}
+
 .questions {
   max-width: 1000px;
   color: $primary-color;
@@ -18,6 +27,10 @@ $primary-color: #FF4C65 !default;
 
   .button_to {
     display: inline-block;
+  }
+
+  .col.s12.card {
+    margin-top: 1rem;
   }
 
   .card {
